Header css - dropdown not done

--- a/index.html
+++ b/index.html
@@ -19,14 +19,64 @@
                     </svg>
                 </a>
                 <ul class="header__nav-list">
-                    <li><a href="#" class="header__nav-item">Explore <i class="fas fa-chevron-down fa-xs"></i></a></li>
-                    <li><a href="#" class="header__nav-item">Find Work <i class="fas fa-chevron-down fa-xs"></i></a></li>
-                    <li><a href="#" class="header__nav-item">Hiring Designers? <i class="fas fa-chevron-down fa-xs"></i></a></li>
+                    <li class="dropdown">
+                        <a href="#" class="header__nav-item">Explore&nbsp<i class="fas fa-chevron-down fa-xs"></i></a>
+                        <div class="dropdown__item">
+                            <ul class="dropdown__nav1">
+                                <li class="nav1__item">
+                                    <a href="">
+                                        <img src="https://placeimg.com/140/105/animals" alt="">
+                                        <h4>Shots</h4>
+                                        <p>Get insprired with designs shared by our talented community</p>
+                                    </a>
+                                </li>
+                                <li class="nav1__item">
+                                    <a href="">
+                                        <img src="https://placeimg.com/140/105/nature" alt="">
+                                        <h4>Top Designers</h4>
+                                        <p>Check out the rankings and see which designers are trending</p>
+                                    </a>
+                                </li>
+                                <li class="nav1__item">
+                                    <a href="">
+                                        <img src="https://placeimg.com/140/105/architecture" alt="">
+                                        <h4>Blog</h4>
+                                        <p>Amazing interview with design industry leaders, tutorials, and more</p>
+                                    </a>
+                                </li>
+                                <li class="nav1__item">
+                                    <a href="">
+                                        <img src="https://placeimg.com/140/105/people" alt="">
+                                        <h4>Weekly Warm-up</h4>
+                                        <p>Join the gun and flex your design skills with our weekly prompt</p>
+                                    </a>
+                                </li>
+                                <li class="nav1__item">
+                                    <a href="">
+                                        <img src="https://placeimg.com/140/105/tech" alt="">
+                                        <h4>Design Workshops</h4>
+                                        <p>Design Beautiful, Accessible Interfaces with Matt D. Smith on January 28</p>
+                                    </a>
+                                </li>
+                            </ul>
+                            <ul class="dropdown__nav2">
+                                <li class="nav2__item"><a href="">Teams</a></li>
+                                <li class="nav2__item"><a href="">Goods for Sale</a></li>
+                                <li class="nav2__item"><a href="">Playoffs</a></li>
+                                <li class="nav2__item"><a href="">Dribble Shop</a></li>
+                                <li class="nav2__item"><a href="">About Dribble</a></li>
+                                <li class="nav2__item"><a href="">Advertise</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="dropdown"><a href="#" class="header__nav-item">Find Work&nbsp<i class="fas fa-chevron-down fa-xs"></i></a></li>
+                    <li id="seperator">|</li>
+                    <li class="dropdown"><a href="#" class="header__nav-item">Hiring Designers?&nbsp<i class="fas fa-chevron-down fa-xs"></i></a></li>
                 </ul>
             </div>
 
             <div class="header-right">
-                <a href="#" class="search-btn"><i class="fas fa-search fa-lg"></i></a>
+                <a href="#" class="search-btn"><i class="fas fa-search"></i></a>
                 <ul class="header__btns">
                     <li><a href="#"><button class="btn btn-primary">Sign in</button></a></li>
                     <li><a href="#"><button class="btn btn-alt">Sign up</button></a></li>
