header dropdown 1/3 finished

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                     <a href="">
                                         <img src="https://placeimg.com/140/105/nature" alt="">
                                         <h4>Top Designers</h4>
-                                        <p>Check out the rankings and see which designers are trending</p>
+                                        <p>Check out the rankings and&nbspsee which designers are trending</p>
                                     </a>
                                 </li>
                                 <li class="nav1__item">
