--- a/index.html
+++ b/index.html
@@ -69,9 +69,63 @@
                             </ul>
                         </div>
                     </li>
-                    <li class="dropdown"><a href="#" class="header__nav-item">Find Work&nbsp<i class="fas fa-chevron-down fa-xs"></i></a></li>
+                    <li class="dropdown">
+                        <a href="#" class="header__nav-item">Find Work&nbsp<i class="fas fa-chevron-down fa-xs"></i></a>
+                        <div class="dropdown__item">
+                            <ul class="dropdown__nav1">
+                                <li class="nav1__item">
+                                    <a href="">
+                                        <img src="https://placeimg.com/140/105/animals" alt="">
+                                        <h4>Job Board</h4>
+                                        <p>Find your dream job on Dribble</p>
+                                    </a>
+                                </li>
+                                <li class="nav1__item">
+                                    <a href="">
+                                        <img src="https://placeimg.com/140/105/nature" alt="">
+                                        <h4>Freelance Projects<span id="pro">pro</span></h4>
+                                        <p>Exclusive project board perfect for Freelancers and Agencies</p>
+                                    </a>
+                                </li>
+                                <li class="nav1__item">
+                                    <a href="">
+                                        <img src="https://placeimg.com/140/105/architecture" alt="">
+                                        <h4>Blog</h4>
+                                        <p>Amazing interview with design industry leaders, tutorials, and more</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
                     <li id="seperator">|</li>
-                    <li class="dropdown"><a href="#" class="header__nav-item">Hiring Designers?&nbsp<i class="fas fa-chevron-down fa-xs"></i></a></li>
+                    <li class="dropdown">
+                        <a href="#" class="header__nav-item">Hiring Designers?&nbsp<i class="fas fa-chevron-down fa-xs"></i></a>
+                        <div class="dropdown__item">
+                            <ul class="dropdown__nav1">
+                                <li class="nav1__item">
+                                    <a href="">
+                                        <img src="https://placeimg.com/140/105/animals" alt="">
+                                        <h4>List my job opening</h4>
+                                        <p>Publish your open role on the world's #1 job board for creatives</p>
+                                    </a>
+                                </li>
+                                <li class="nav1__item">
+                                    <a href="">
+                                        <img src="https://placeimg.com/140/105/nature" alt="">
+                                        <h4>Designer Search</h4>
+                                        <p>Find and contact designers who are looking for their next opportunity</p>
+                                    </a>
+                                </li>
+                                <li class="nav1__item">
+                                    <a href="">
+                                        <img src="https://placeimg.com/140/105/architecture" alt="">
+                                        <h4>Job post + search</h4>
+                                        <p>Search our database for top talent and post your listing on our popular job board</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
                 </ul>
             </div>
 
