Visual (banner) part finished

--- a/index.html
+++ b/index.html
@@ -139,6 +139,20 @@
         </div>
     </header>
 
+    <section class="visual">
+        <div class="visual-container">
+            <div class="visual__content">
+                <h2>Discover the world's top designers & creatives</h2>
+                <p>Dribbble is the leading destination to find & showcase creative work and home to the world's best design professionals.</p>
+                <a href="#"><button class="btn btn-alt">Sign up</button></a>
+            </div>
+            <div class="visual__img">
+                <img src="https://cdn.dribbble.com/assets/art-banners/romainbriaux-db195db2c89f7f239f555901e8578e08987c000329287238e961b378a62a15e5.png" alt="">
+                <span>Art by <a href="#">Romain Briaux</a></span>
+            </div>
+        </div>
+    </section>
+
     <script src="source/main.js"></script>
 </body>
 </html>
