Nav of Main and dropdown JS

--- a/index.html
+++ b/index.html
@@ -153,6 +153,34 @@
         </div>
     </section>
 
+    <div class="main-content">
+        <div class="main-container">
+            <div class="main__nav">
+                <div class="main__nav--dropdown">
+                    <button class="main__nav-btn">Popular&nbsp&nbsp&nbsp&nbsp&nbsp<i class="fas fa-chevron-down fa-xs"></i></button>
+                    <ul class="nav__dropdown--list">
+                        <li class="nav__dropdown--item"><a href="#" class="current-item">Popular</a></li>
+                        <li class="nav__dropdown--item"><a href="#">New & Noteworthy</a></li>
+                        <li class="nav__dropdown--item"><a href="#">Goods for Sale</a></li>
+                    </ul>
+                </div>
+                <ul class="main__nav--list">
+                    <li class="main__nav--item item-selected"><a href="#">All</a></li>
+                    <li class="main__nav--item"><a href="#">Animation</a></li>
+                    <li class="main__nav--item"><a href="#">Branding</a></li>
+                    <li class="main__nav--item"><a href="#">Illustration</a></li>
+                    <li class="main__nav--item"><a href="#">Mobile</a></li>
+                    <li class="main__nav--item"><a href="#">Print</a></li>
+                    <li class="main__nav--item"><a href="#">Product Design</a></li>
+                    <li class="main__nav--item"><a href="#">Typography</a></li>
+                    <li class="main__nav--item"><a href="#">Web Design</a></li>
+                </ul>
+                <div class="main__nav--filters">
+                    <button class="main__nav--filters-btn"><i class="fas fa-filter"></i>&nbspFilters</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="source/main.js"></script>
 </body>
 </html>
