--- a/index.html
+++ b/index.html
@@ -176,39 +176,40 @@
                     <li class="main__nav--item"><a href="#">Web Design</a></li>
                 </ul>
                 <div class="main__nav--filters">
-                    <button class="main__nav--filters-btn"><i class="fas fa-filter"></i>&nbspFilters</button>
-                    <ul class="filter__dropdown">
-                        <li class="filter__dropdown-item">
-                            <h5>Tags</h5>
-                            <div class="filter__input">
-                                <i class="fas fa-search"></i>
-                                <input type="text">
-                            </div>
-                        </li>
-                        <li class="filter__dropdown-item">
-                            <h5>Color</h5>
-                            <div class="filter__input">
-                                <i class="fas fa-palette"></i>
-                                <input type="text">
-                            </div>
-                        </li>
-                        <li class="filter__dropdown-item">
-                            <h5>Timeframe</h5>
-                            <button class="filter-btn">Now<i class="fas fa-chevron-down fa-xs"></i></button>
-                        </li>
-                        <li class="filter__dropdown-item">
-                            <h5>Made With</h5>
-                            <button class="filter-btn">All Apps<i class="fas fa-chevron-down fa-xs"></i></button>
-                        </li>
-                        <li class="filter__dropdown-item">
-                            <h5>Downloads</h5>
-                            <button class="filter-btn">All Shots<i class="fas fa-chevron-down fa-xs"></i></button>
-                        </li>
-                    </ul>
+                    <button class="main__nav--filters-btn show"><i class="fas fa-filter"></i>&nbspFilters</button>
                 </div>
             </div>
+            <ul class="filter__dropdown show">
+                <li class="filter__dropdown-item">
+                    <h5>Tags</h5>
+                    <div class="filter__input">
+                        <i class="fas fa-search"></i>
+                        <input type="text">
+                    </div>
+                </li>
+                <li class="filter__dropdown-item">
+                    <h5>Color</h5>
+                    <div class="filter__input">
+                        <i class="fas fa-palette"></i>
+                        <input type="text">
+                    </div>
+                </li>
+                <li class="filter__dropdown-item">
+                    <h5>Timeframe</h5>
+                    <button class="filter-btn">Now<i class="fas fa-chevron-down fa-xs"></i></button>
+                </li>
+                <li class="filter__dropdown-item">
+                    <h5>Made With</h5>
+                    <button class="filter-btn">All Apps<i class="fas fa-chevron-down fa-xs"></i></button>
+                </li>
+                <li class="filter__dropdown-item">
+                    <h5>Downloads</h5>
+                    <button class="filter-btn">All Shots<i class="fas fa-chevron-down fa-xs"></i></button>
+                </li>
+            </ul>
         </div>
     </div>
-    <script src="source/main.js"></script>
+    <script src="source/dropdownMain.js"></script>
+    <script src="source/dropdownFilter.js"></script>
 </body>
 </html>
