Main Content - hovering effect remaining

--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
                     <li class="main__nav--item"><a href="#">Web Design</a></li>
                 </ul>
                 <div class="main__nav--filters">
-                    <button class="main__nav--filters-btn show"><i class="fas fa-filter"></i>&nbspFilters</button>
+                    <button class="main__nav--filters-btn"><i class="fas fa-filter"></i>&nbspFilters</button>
                 </div>
             </div>
-            <ul class="filter__dropdown show">
+            <ul class="filter__dropdown">
                 <li class="filter__dropdown-item">
                     <h5>Tags</h5>
                     <div class="filter__input">
@@ -207,6 +207,83 @@
                     <button class="filter-btn">All Shots<i class="fas fa-chevron-down fa-xs"></i></button>
                 </li>
             </ul>
+            <div class="main__design-grid">
+                <div class="main__design">
+                    <div class="image-wrapper">
+                        <img class="design-image" src="https://source.unsplash.com/random/414x311" alt="">
+                    </div>
+                    <div class="design-title">
+                        <div class="design__user">
+                            <img class="design__user-img" src="https://source.unsplash.com/random/100x100" alt="">
+                            <h5 class="design__user-name">Name <span class="title__state">pro</span></h5>
+                        </div>
+                        <div class="design__icons">
+                            <span class="design__comment"><i class="fas fa-comment"></i> 3</span>
+                            <span class="design__heart"><i class="fas fa-heart"></i> 127</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="main__design">
+                    <div class="image-wrapper">
+                        <img class="design-image" src="https://source.unsplash.com/random/414x311" alt="">
+                    </div>
+                    <div class="design-title">
+                        <div class="design__user">
+                            <img class="design__user-img" src="https://source.unsplash.com/random/100x100" alt="">
+                            <h5 class="design__user-name">Name <span class="title__state">pro</span></h5>
+                        </div>
+                        <div class="design__icons">
+                            <span class="design__comment"><i class="fas fa-comment"></i> 3</span>
+                            <span class="design__heart"><i class="fas fa-heart"></i> 127</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="main__design">
+                    <div class="image-wrapper">
+                        <img class="design-image" src="https://source.unsplash.com/random/414x311" alt="">
+                    </div>
+                    <div class="design-title">
+                        <div class="design__user">
+                            <img class="design__user-img" src="https://source.unsplash.com/random/100x100" alt="">
+                            <h5 class="design__user-name">Name <span class="title__state">pro</span></h5>
+                        </div>
+                        <div class="design__icons">
+                            <span class="design__comment"><i class="fas fa-comment"></i> 3</span>
+                            <span class="design__heart"><i class="fas fa-heart"></i> 127</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="main__design">
+                    <div class="image-wrapper">
+                        <img class="design-image" src="https://source.unsplash.com/random/414x311" alt="">
+                    </div>
+                    <div class="design-title">
+                        <div class="design__user">
+                            <img class="design__user-img" src="https://source.unsplash.com/random/100x100" alt="">
+                            <h5 class="design__user-name">Name <span class="title__state">pro</span></h5>
+                        </div>
+                        <div class="design__icons">
+                            <span class="design__comment"><i class="fas fa-comment"></i> 3</span>
+                            <span class="design__heart"><i class="fas fa-heart"></i> 127</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="main__design">
+                    <div class="image-wrapper">
+                        <img class="design-image" src="https://source.unsplash.com/random/414x311" alt="">
+                    </div>
+                    <div class="design-title">
+                        <div class="design__user">
+                            <img class="design__user-img" src="https://source.unsplash.com/random/100x100" alt="">
+                            <h5 class="design__user-name">Name <span class="title__state">pro</span></h5>
+                        </div>
+                        <div class="design__icons">
+                            <span class="design__comment"><i class="fas fa-comment"></i> 3</span>
+                            <span class="design__heart"><i class="fas fa-heart"></i> 127</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="source/dropdownMain.js"></script>
