--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drrible - Discover the World's Top Designers & Creative Professionals</title>
+    <link rel="shortcut icon" href="https://cdn.dribbble.com/assets/dribbble-ball-192-23ecbdf987832231e87c642bb25de821af1ba6734a626c8c259a20a0ca51a247.png">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
@@ -154,6 +155,9 @@
     </section>
 
     <div class="main-content">
+        <div id="page-up">
+            <i class="fas fa-arrow-circle-up fa-3x"></i>
+        </div>
         <div class="main-container">
             <div class="main__nav">
                 <div class="main__nav--dropdown">
@@ -211,6 +215,13 @@
                 <div class="main__design">
                     <div class="image-wrapper">
                         <img class="design-image" src="https://source.unsplash.com/random/414x311" alt="">
+                        <div class="hover-items">
+                            <h5>Lorem-An Ipsum Page</h5>
+                            <div class="hover__icons">
+                                <i class="fas fa-folder-plus"></i>
+                                <i class="fas fa-heart"></i>
+                            </div>
+                        </div>
                     </div>
                     <div class="design-title">
                         <div class="design__user">
@@ -226,6 +237,13 @@
                 <div class="main__design">
                     <div class="image-wrapper">
                         <img class="design-image" src="https://source.unsplash.com/random/414x311" alt="">
+                        <div class="hover-items">
+                            <h5>Lorem-An Ipsum Page</h5>
+                            <div class="hover__icons">
+                                <i class="fas fa-folder-plus"></i>
+                                <i class="fas fa-heart"></i>
+                            </div>
+                        </div>
                     </div>
                     <div class="design-title">
                         <div class="design__user">
@@ -241,6 +259,13 @@
                 <div class="main__design">
                     <div class="image-wrapper">
                         <img class="design-image" src="https://source.unsplash.com/random/414x311" alt="">
+                        <div class="hover-items">
+                            <h5>Lorem-An Ipsum Page</h5>
+                            <div class="hover__icons">
+                                <i class="fas fa-folder-plus"></i>
+                                <i class="fas fa-heart"></i>
+                            </div>
+                        </div>
                     </div>
                     <div class="design-title">
                         <div class="design__user">
@@ -256,6 +281,13 @@
                 <div class="main__design">
                     <div class="image-wrapper">
                         <img class="design-image" src="https://source.unsplash.com/random/414x311" alt="">
+                        <div class="hover-items">
+                            <h5>Lorem-An Ipsum Page</h5>
+                            <div class="hover__icons">
+                                <i class="fas fa-folder-plus"></i>
+                                <i class="fas fa-heart"></i>
+                            </div>
+                        </div>
                     </div>
                     <div class="design-title">
                         <div class="design__user">
@@ -271,6 +303,233 @@
                 <div class="main__design">
                     <div class="image-wrapper">
                         <img class="design-image" src="https://source.unsplash.com/random/414x311" alt="">
+                        <div class="hover-items">
+                            <h5>Lorem-An Ipsum Page</h5>
+                            <div class="hover__icons">
+                                <i class="fas fa-folder-plus"></i>
+                                <i class="fas fa-heart"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="design-title">
+                        <div class="design__user">
+                            <img class="design__user-img" src="https://source.unsplash.com/random/100x100" alt="">
+                            <h5 class="design__user-name">Name <span class="title__state">pro</span></h5>
+                        </div>
+                        <div class="design__icons">
+                            <span class="design__comment"><i class="fas fa-comment"></i> 3</span>
+                            <span class="design__heart"><i class="fas fa-heart"></i> 127</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="main__design">
+                    <div class="image-wrapper">
+                        <img class="design-image" src="https://source.unsplash.com/random/414x311" alt="">
+                        <div class="hover-items">
+                            <h5>Lorem-An Ipsum Page</h5>
+                            <div class="hover__icons">
+                                <i class="fas fa-folder-plus"></i>
+                                <i class="fas fa-heart"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="design-title">
+                        <div class="design__user">
+                            <img class="design__user-img" src="https://source.unsplash.com/random/100x100" alt="">
+                            <h5 class="design__user-name">Name <span class="title__state">pro</span></h5>
+                        </div>
+                        <div class="design__icons">
+                            <span class="design__comment"><i class="fas fa-comment"></i> 3</span>
+                            <span class="design__heart"><i class="fas fa-heart"></i> 127</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="main__design">
+                    <div class="image-wrapper">
+                        <img class="design-image" src="https://source.unsplash.com/random/414x311" alt="">
+                        <div class="hover-items">
+                            <h5>Lorem-An Ipsum Page</h5>
+                            <div class="hover__icons">
+                                <i class="fas fa-folder-plus"></i>
+                                <i class="fas fa-heart"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="design-title">
+                        <div class="design__user">
+                            <img class="design__user-img" src="https://source.unsplash.com/random/100x100" alt="">
+                            <h5 class="design__user-name">Name <span class="title__state">pro</span></h5>
+                        </div>
+                        <div class="design__icons">
+                            <span class="design__comment"><i class="fas fa-comment"></i> 3</span>
+                            <span class="design__heart"><i class="fas fa-heart"></i> 127</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="main__design">
+                    <div class="image-wrapper">
+                        <img class="design-image" src="https://source.unsplash.com/random/414x311" alt="">
+                        <div class="hover-items">
+                            <h5>Lorem-An Ipsum Page</h5>
+                            <div class="hover__icons">
+                                <i class="fas fa-folder-plus"></i>
+                                <i class="fas fa-heart"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="design-title">
+                        <div class="design__user">
+                            <img class="design__user-img" src="https://source.unsplash.com/random/100x100" alt="">
+                            <h5 class="design__user-name">Name <span class="title__state">pro</span></h5>
+                        </div>
+                        <div class="design__icons">
+                            <span class="design__comment"><i class="fas fa-comment"></i> 3</span>
+                            <span class="design__heart"><i class="fas fa-heart"></i> 127</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="main__design">
+                    <div class="image-wrapper">
+                        <img class="design-image" src="https://source.unsplash.com/random/414x311" alt="">
+                        <div class="hover-items">
+                            <h5>Lorem-An Ipsum Page</h5>
+                            <div class="hover__icons">
+                                <i class="fas fa-folder-plus"></i>
+                                <i class="fas fa-heart"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="design-title">
+                        <div class="design__user">
+                            <img class="design__user-img" src="https://source.unsplash.com/random/100x100" alt="">
+                            <h5 class="design__user-name">Name <span class="title__state">pro</span></h5>
+                        </div>
+                        <div class="design__icons">
+                            <span class="design__comment"><i class="fas fa-comment"></i> 3</span>
+                            <span class="design__heart"><i class="fas fa-heart"></i> 127</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="main__design">
+                    <div class="image-wrapper">
+                        <img class="design-image" src="https://source.unsplash.com/random/414x311" alt="">
+                        <div class="hover-items">
+                            <h5>Lorem-An Ipsum Page</h5>
+                            <div class="hover__icons">
+                                <i class="fas fa-folder-plus"></i>
+                                <i class="fas fa-heart"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="design-title">
+                        <div class="design__user">
+                            <img class="design__user-img" src="https://source.unsplash.com/random/100x100" alt="">
+                            <h5 class="design__user-name">Name <span class="title__state">pro</span></h5>
+                        </div>
+                        <div class="design__icons">
+                            <span class="design__comment"><i class="fas fa-comment"></i> 3</span>
+                            <span class="design__heart"><i class="fas fa-heart"></i> 127</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="main__design">
+                    <div class="image-wrapper">
+                        <img class="design-image" src="https://source.unsplash.com/random/414x311" alt="">
+                        <div class="hover-items">
+                            <h5>Lorem-An Ipsum Page</h5>
+                            <div class="hover__icons">
+                                <i class="fas fa-folder-plus"></i>
+                                <i class="fas fa-heart"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="design-title">
+                        <div class="design__user">
+                            <img class="design__user-img" src="https://source.unsplash.com/random/100x100" alt="">
+                            <h5 class="design__user-name">Name <span class="title__state">pro</span></h5>
+                        </div>
+                        <div class="design__icons">
+                            <span class="design__comment"><i class="fas fa-comment"></i> 3</span>
+                            <span class="design__heart"><i class="fas fa-heart"></i> 127</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="main__design">
+                    <div class="image-wrapper">
+                        <img class="design-image" src="https://source.unsplash.com/random/414x311" alt="">
+                        <div class="hover-items">
+                            <h5>Lorem-An Ipsum Page</h5>
+                            <div class="hover__icons">
+                                <i class="fas fa-folder-plus"></i>
+                                <i class="fas fa-heart"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="design-title">
+                        <div class="design__user">
+                            <img class="design__user-img" src="https://source.unsplash.com/random/100x100" alt="">
+                            <h5 class="design__user-name">Name <span class="title__state">pro</span></h5>
+                        </div>
+                        <div class="design__icons">
+                            <span class="design__comment"><i class="fas fa-comment"></i> 3</span>
+                            <span class="design__heart"><i class="fas fa-heart"></i> 127</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="main__design">
+                    <div class="image-wrapper">
+                        <img class="design-image" src="https://source.unsplash.com/random/414x311" alt="">
+                        <div class="hover-items">
+                            <h5>Lorem-An Ipsum Page</h5>
+                            <div class="hover__icons">
+                                <i class="fas fa-folder-plus"></i>
+                                <i class="fas fa-heart"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="design-title">
+                        <div class="design__user">
+                            <img class="design__user-img" src="https://source.unsplash.com/random/100x100" alt="">
+                            <h5 class="design__user-name">Name <span class="title__state">pro</span></h5>
+                        </div>
+                        <div class="design__icons">
+                            <span class="design__comment"><i class="fas fa-comment"></i> 3</span>
+                            <span class="design__heart"><i class="fas fa-heart"></i> 127</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="main__design">
+                    <div class="image-wrapper">
+                        <img class="design-image" src="https://source.unsplash.com/random/414x311" alt="">
+                        <div class="hover-items">
+                            <h5>Lorem-An Ipsum Page</h5>
+                            <div class="hover__icons">
+                                <i class="fas fa-folder-plus"></i>
+                                <i class="fas fa-heart"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="design-title">
+                        <div class="design__user">
+                            <img class="design__user-img" src="https://source.unsplash.com/random/100x100" alt="">
+                            <h5 class="design__user-name">Name <span class="title__state">pro</span></h5>
+                        </div>
+                        <div class="design__icons">
+                            <span class="design__comment"><i class="fas fa-comment"></i> 3</span>
+                            <span class="design__heart"><i class="fas fa-heart"></i> 127</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="main__design">
+                    <div class="image-wrapper">
+                        <img class="design-image" src="https://source.unsplash.com/random/414x311" alt="">
+                        <div class="hover-items">
+                            <h5>Lorem-An Ipsum Page</h5>
+                            <div class="hover__icons">
+                                <i class="fas fa-folder-plus"></i>
+                                <i class="fas fa-heart"></i>
+                            </div>
+                        </div>
                     </div>
                     <div class="design-title">
                         <div class="design__user">
@@ -284,9 +543,19 @@
                     </div>
                 </div>
             </div>
+            <div class="main__sign">
+                <button class="btn btn-alt">Sign up to continue</button>
+                <button class="btn btn-primary">or sign in</button>
+            </div>
         </div>
     </div>
+
+    <footer class="footer">
+
+    </footer>
+    
     <script src="source/dropdownMain.js"></script>
     <script src="source/dropdownFilter.js"></script>
+    <script src="source/pageUp.js"></script>
 </body>
 </html>
