Desktop view finished
Media query left to be done.
Some features, such as the button in filter dropdown, are not implemented as it was not properly planned out and seemed pretty much the same as "popular" button.

--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
             <div class="footer__bottom">
                 <span class="footer__copyright">ⓒ 2021 Dribble. All rights reserved.</span>
                 <span class="footer__heart">Made with ♥ remotely from Incheon</span>
-                <span class="footer__shots">14,872,480 shots dribbbled<i class="fas fa-basketball-ball"></i></span>
+                <span class="footer__shots"><span class="footer__shots-bold">14,872,480</span>&nbspshots dribbbled&nbsp&nbsp<i class="fas fa-basketball-ball fa-2x"></i></span>
             </div>
         </div>
     </footer>
