Media Query for header and visual complete

--- a/index.html
+++ b/index.html
@@ -129,7 +129,6 @@
                     </li>
                 </ul>
             </div>
-
             <div class="header-right">
                 <a href="#" class="search-btn"><i class="fas fa-search"></i></a>
                 <ul class="header__btns">
@@ -155,18 +154,33 @@
                             <span>Explore</span>
                             <i class="fas fa-angle-down fa-sm"></i>
                         </div>
+                        <ul class="mobile-header__dropdrop">
+                            <li>Shots</li>
+                            <li>Top Designers</li>
+                            <li>Blog</li>
+                        </ul>
                     </li>
                     <li class="mobile-header__dropdown-item">
                         <div class="item__wrapper">
                             <span>Find Work</span>
                             <i class="fas fa-angle-down fa-sm"></i>
                         </div>
+                        <ul class="mobile-header__dropdrop">
+                            <li>Shots</li>
+                            <li>Top Designers</li>
+                            <li>Blog</li>
+                        </ul>
                     </li>
                     <li class="mobile-header__dropdown-item">
                         <div class="item__wrapper">
                             <span>Hiring Designers?</span>
                             <i class="fas fa-angle-down fa-sm"></i>
                         </div>
+                        <ul class="mobile-header__dropdrop">
+                            <li>Shots</li>
+                            <li>Top Designers</li>
+                            <li>Blog</li>
+                        </ul>
                     </li>
                 </ul>
                 <a href="index.html" class="main-logo">
@@ -681,5 +695,6 @@
     <script src="source/dropdownFilter.js"></script>
     <script src="source/pageUp.js"></script>
     <script src="source/mobileHeaderDrop.js"></script>
+    <script src="source/mobileHeaderDropDrop.js"></script>
 </body>
 </html>
